<?xml version="1.0"?>
<package format="2">
  <name>pacmod</name>
  <version>2.0.2</version>
  <description>AEV CAN driver package</description>
  <license>Copyright (C) Applied Electric Vehicles - All Rights Reserved</license>

  <maintainer email="harry.roache-wilson@appliedev.com">AEV Software Team</maintainer>
  <author email="harry.roache-wilson@appliedev.com">Harry Roache-Wilson</author>

  <build_depend>roslint</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pacmod_msgs</depend>
  <depend>can_msgs</depend>
</package>
